[gd_scene load_steps=6 format=3 uid="uid://dpiqml0sgr8ba"]

[ext_resource type="Script" uid="uid://le13jikcb3gm" path="res://scenes/pitcher/pitcher.gd" id="1_53gp2"]
[ext_resource type="PackedScene" uid="uid://bfyy5o5encqnb" path="res://scenes/hit-area/baseball.tscn" id="2_4dryw"]
[ext_resource type="Texture2D" uid="uid://clg6a8kq7xwm3" path="res://assets/pitcher.png" id="2_v7n3e"]
[ext_resource type="Texture2D" uid="uid://c8vebnkhtxxr6" path="res://assets/generic/circle.png" id="4_e8xoi"]

[sub_resource type="Curve" id="Curve_e8xoi"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.481386), 0.0, 0.0, 0, 0]
point_count = 2

[node name="Pitcher" type="Node2D"]
z_index = 5
script = ExtResource("1_53gp2")
ball_scene = ExtResource("2_4dryw")

[node name="Sprite" type="Sprite2D" parent="."]
position = Vector2(8, 0)
texture = ExtResource("2_v7n3e")

[node name="ShootParticles" type="CPUParticles2D" parent="."]
z_index = -1
position = Vector2(8, 0)
emitting = false
texture = ExtResource("4_e8xoi")
lifetime = 0.8
one_shot = true
explosiveness = 0.8
gravity = Vector2(0, 0)
initial_velocity_min = 30.0
initial_velocity_max = 40.0
damping_min = 40.0
damping_max = 55.0
scale_amount_min = 0.0
scale_amount_max = 0.75
scale_amount_curve = SubResource("Curve_e8xoi")
color = Color(0.333333, 0.333333, 0.333333, 1)

[node name="PitchTimer" type="Timer" parent="."]

[connection signal="timeout" from="PitchTimer" to="." method="_on_pitch_timer_timeout"]
